wasm/fastq_minimum_read_size_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_i6cwlejt/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/1565c174712ba4aa4780bf16745227ce44154954.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/1565c174712ba4aa4780bf16745227ce44154954.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/b70a52348a160a8134f2f5d34f7bdf63d8d621fb.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/b70a52348a160a8134f2f5d34f7bdf63d8d621fb.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/edf1e781ab2d51f8388fe2920b68cbda800f16d0.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/edf1e781ab2d51f8388fe2920b68cbda800f16d0.json" for subsequent builds)
cache:INFO:  - ok
